objects/ASI_CRM_EOL__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Action_Plan_Execution__c</fullName>
        <label>Action Plan (Execution)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_End_of_Lifes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_End_of_Lifes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_End_of_Lifes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Aberlour</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal</fullName>
                </value>
                <value>
                    <fullName>Clan Campbell</fullName>
                </value>
                <value>
                    <fullName>Glenlivet</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>Wild Turkey</fullName>
                </value>
                <value>
                    <fullName>Brancott</fullName>
                </value>
                <value>
                    <fullName>Cafe De Paris</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo</fullName>
                </value>
                <value>
                    <fullName>Chateau Cordeillan Bages</fullName>
                </value>
                <value>
                    <fullName>Chateau Villa</fullName>
                </value>
                <value>
                    <fullName>Cono Sur</fullName>
                </value>
                <value>
                    <fullName>Domaine</fullName>
                </value>
                <value>
                    <fullName>Dubonnet</fullName>
                </value>
                <value>
                    <fullName>Etchart</fullName>
                </value>
                <value>
                    <fullName>Graffigna</fullName>
                </value>
                <value>
                    <fullName>Helan Mountain</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek</fullName>
                </value>
                <value>
                    <fullName>Long Mountain</fullName>
                </value>
                <value>
                    <fullName>L&apos;Ostal Cazes</fullName>
                </value>
                <value>
                    <fullName>Louis Latour</fullName>
                </value>
                <value>
                    <fullName>Michel Lynch</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Pol Roger</fullName>
                </value>
                <value>
                    <fullName>Stoneleigh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COGNAC</fullName>
                </value>
                <value>
                    <fullName>WHISKY</fullName>
                </value>
                <value>
                    <fullName>WINE</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>CHAMPAGNE</fullName>
                </value>
                <value>
                    <fullName>RTD</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_Inventory__c</fullName>
        <label>Current Inventory (As Of Decision Date)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion_Plan_Vol__c</fullName>
        <label>Depletion Plan (Vol.)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group_No__c</fullName>
        <label>Item Group No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Marketing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_End_of_Lifes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Product_Launch_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Product Launch No.</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>Product End of Lifes</relationshipLabel>
        <relationshipName>Product_End_of_Lifes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Notify_Logistics_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Logistics Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packing__c</fullName>
        <label>Packing(Bottle * Size)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Name_Chinese__c</fullName>
        <label>Product Name (Chinese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Name_English__c</fullName>
        <label>Product Name (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receiver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_End_of_Lifes2Aiu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receiver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_End_of_Lifes2Aj4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receiver_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiver 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_End_of_Lifes2AjE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EOL</fullName>
                </value>
                <value>
                    <fullName>SFG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Type__c</fullName>
        <label>SKU Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-going SKU</fullName>
                </value>
                <value>
                    <fullName>One-shot SKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Update_After_12_Months__c</fullName>
        <label>Status Update After 12 Months</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Update_After_3_Months__c</fullName>
        <label>Status Update After 3 Months</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Update_After_6_Months__c</fullName>
        <label>Status Update After 6 Months</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Subbrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subbrand</label>
        <referenceTo>ASI_CN_NPL_Sub_brand__c</referenceTo>
        <relationshipLabel>Product End of Lifes</relationshipLabel>
        <relationshipName>Product_End_of_Lifes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Substitute_Product__c</fullName>
        <label>Substitute Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_When_To_EOL__c</fullName>
        <label>When to EOL</label>
        <type>Date</type>
    </fields>
    <label>Product End of Life</label>
    <listViews>
        <fullName>ASI_CRM_CN_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Product_Name_English__c</columns>
        <columns>ASI_CRM_SKU_Type__c</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Category__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_When_To_EOL__c</columns>
        <columns>ASI_CRM_Approver_1__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_EOL__c.ASI_CRM_CN_EOL,ASI_CRM_EOL__c.ASI_CRM_CN_Product_EOL_ApprovedView</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EOL-{YY}-{0000}</displayFormat>
        <label>End of Life Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product End of Lifes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_EOL</fullName>
        <active>true</active>
        <label>CN Product EOL</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Product_EOL_ApprovedView</fullName>
        <active>true</active>
        <label>CN Product EOL ApprovedView</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>